# thermochimica

./: .gitignore  CLAUDE.md  CMakeLists.txt  DIAGNOSTIC_RESULTS.md  PHASE1_DIAGNOSTICS.md  README.md  VALIDATION_REPORT.md  cleanup_build_artifacts.sh
cmake/: ThermochimicaConfig.cmake.in
cpp/docs/: migration_guide.md
cpp/examples/: basic_usage.cpp
cpp/include/thermochimica/: ThermoContext.hpp  Thermochimica.hpp  ThermochimicaCompat.hpp
cpp/include/thermochimica/context/: GEMState.hpp  ParserState.hpp  ReinitState.hpp  SubMinState.hpp  ThermoIO.hpp
cpp/include/thermochimica/parser/: ChemSageParser.hpp
cpp/include/thermochimica/solver/: GEMSolver.hpp
cpp/include/thermochimica/util/: Constants.hpp
cpp/src/api/: CouplingAPI.cpp  Thermochimica.cpp
cpp/src/context/: CTZState.cpp  GEMState.cpp  ParserState.cpp  ReinitState.cpp  ThermoContext.cpp  ThermoState.cpp
cpp/src/models/: ExcessGibbs.cpp  IdealMixing.cpp  QKTO.cpp  SUBI.cpp  SUBL.cpp
cpp/src/parser/: ChemSageParser.cpp
cpp/src/postprocess/: HeatCapacity.cpp  PostProcess.cpp
cpp/src/setup/: CheckSystem.cpp  CheckThermoInput.cpp  CompThermoData.cpp
cpp/src/solver/: CheckConvergence.cpp  GEMLineSearch.cpp  GEMNewton.cpp  GEMSolver.cpp  LevelingSolver.cpp  PhaseAssemblage.cpp  PostLevelingSolver.cpp  Subminimization.cpp
cpp/tests/integration/: TestThermo.cpp
docs/: GEM_SOLVER_DESIGN.md  MIGRATION_FROM_FREE_FUNCTIONS.md  api-reference.md  architecture.md  building.md  class_based_api.md  configuration.md  databases.md  error-handling.md  examples.md  getting-started.md  oo_architecture.md  phase3_plan.md
examples/: basic_usage.cpp
include/thermochimica/: CouplingAPI.h  ThermoClass.hpp  ThermoContext.hpp  Thermochimica.hpp
include/thermochimica/context/: CTZState.hpp  ParserState.hpp  PhaseConstraints.hpp  ThermoIO.hpp  ThermoState.hpp
include/thermochimica/interfaces/: IConvergenceCriterion.hpp  ILineSearch.hpp  INewtonSolver.hpp  IParser.hpp  ISolver.hpp  IThermodynamicModel.hpp  README.md
include/thermochimica/models/: IdealMixingModel.hpp  ModelFactory.hpp  QKTOModel.hpp  RKMPModel.hpp  SUBGModel.hpp  SUBLModel.hpp  SUBQModel.hpp
include/thermochimica/parser/: ChemSageParser.hpp
include/thermochimica/solver/: ConstrainedGEMSolver.hpp  GEMSolver.hpp  NewtonSolver.hpp  PhaseAssemblageManager.hpp  StandardGEMSolver.hpp  WolfeLineSearch.hpp
include/thermochimica/util/: Constants.hpp  ErrorCodes.hpp  Tolerances.hpp
src/api/: CouplingAPI.cpp  ThermoClass.cpp  Thermochimica.cpp
src/context/: PhaseConstraints.cpp  SubMinState.cpp  ThermoContext.cpp  ThermoIO.cpp  ThermoState.cpp
src/models/: ExcessGibbs.cpp  IdealMixingModel.cpp  ModelFactory.cpp  QKTO.cpp  QKTOModel.cpp  RKMP.cpp  RKMPModel.cpp  SUBG.cpp  SUBGModel.cpp  SUBL.cpp  SUBLModel.cpp  SUBQ.cpp  SUBQModel.cpp
src/parser/: ChemSageParser.cpp
src/postprocess/: HeatCapacity.cpp  PostProcess.cpp  PrintResults.cpp
src/setup/: InitThermo.cpp
src/solver/: CheckConvergence.cpp  ConstrainedGEM.cpp  ConstrainedGEMSolver.cpp  GEMNewton.cpp  GEMSolver.cpp  NewtonSolver.cpp  PhaseAssemblage.cpp  PhaseAssemblageManager.cpp  StandardGEMSolver.cpp  Subminimization.cpp  WolfeLineSearch.cpp
tests/: CMakeLists.txt  test_ModelValidation.cpp  test_ThermoClass.cpp
tests/integration/: TestPhaseConstraints.cpp  TestThermo.cpp  TestThermo01.cpp
tests/unit/: test_context.cpp
tools/: BUG_FIXES.md  CMakeLists.txt  CTestTestfile.cmake  DIAGNOSTIC_RESULTS_FINAL.md  Makefile  RANGE_LOOP_IMPLEMENTATION.md  README.md  SESSION_SUMMARY.md  VALIDATION_SUMMARY.md  VALIDATION_WORKFLOW.md  advanced-input.json  batch_validate  batch_validate.cpp  check_elements.cpp  cmake_install.cmake  compare_results.py  convert_legacy_input.py  convert_legacy_input_v2.py  diagnose_graphite.cpp  diagnose_with_trace.cpp  example_results.json  example_tests.json  exclude-runList-results.json  exclude-runList.json  loopCO.json  trial-input-output-results.json  trial-input-output.json  trial-runList-results-detailed.json  trial-runList-results.json  trial-runList.json  validate_all.sh
